[package]
name = "olsr"
version = "0.1.0"
edition = "2021"

[lib]
name = "libgluonolsrdhelper"
path = "src/lib.rs"

[[bin]]
name = "gluon-olsr-debug"
path = "src/debug.rs"

[[bin]]
name = "gluon-olsr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluon-helper = { path = ".." }

# Read more at https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # By default, Cargo instructs compilation units to be compiled and optimized in isolation. LTO instructs the linker to optimize at the link stage. This can, for example, remove dead code and often times reduces binary size.
